<resources>
    <string name="app_name">Trello Fintech</string>
    <string name="app_url">https://trello_fintech.com</string>
    <string name="add_board_title">Создать доску</string>
    <string name="add_board_title_hint">Название доски</string>
    <string name="participants">Участники</string>
    <string name="select_category">Выберите категорию</string>
    <string name="add_task_text">Создать задачу</string>
    <string name="add_task_text_hint">Текст задачи</string>
    <string name="trello_logout">Выйти из Trello аккаунта</string>
    <string name="attachments">Вложения</string>
    <string name="no_description">Нет описания</string>
    <string name="changes_history">История изменений</string>
    <string name="task_search">Поиск задачи</string>
    <string name="delete">Удалить</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="build_chart">Построить диаграмму</string>
    <string name="Gantt">Диаграмма Гантта</string>
    <string name="checklist_title">Чек-лист</string>
    <string name="add_checklist">Добавить чек-лист</string>
    <string name="checkitem">Элемент чек-листа</string>
    <string name="start_or_continue_videocall">Начать/продолжить видеозвонок</string>
    <string name="accept">Принять</string>
    <string name="decline">Отклонить</string>
    <string name="upload_attachment">Загрузить вложение</string>
    <string name="deadline_date">Дата дедлайна</string>
    <string name="deadline_time">Время дедлайна</string>
    <string name="comments">Комментарии</string>
    <string name="comment_input_hint">Оставьте свой комментарий…</string>
    <string name="send">Отправить</string>
</resources>
