<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text"
                android:hint="@string/add_task_text_hint"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView
                android:text="@string/deadline_date"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        <DatePicker
                android:id="@+id/due_date_picker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView
                android:text="@string/deadline_time"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TimePicker
                android:id="@+id/due_time_picker"
                android:timePickerMode="spinner"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>