<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="com.project.trello_fintech.view_models.TaskDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:clickable="true"
            android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:title="@{viewModel.task.text}"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar"
                android:layout_height="0dp"
                android:layout_width="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.project.trello_fintech.views.TaskDetailSectionView
                        app:iconSrc="@drawable/description_icon"
                        app:text="Описание"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:text="@={viewModel.task.description}"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/no_description"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:minHeight="50dp" />
                <com.project.trello_fintech.views.TaskDetailSectionView
                        app:iconSrc="@drawable/participants_icon"
                        app:text="@string/participants"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/participants"
                        android:padding="10dp"
                        android:clickable="true"
                        android:layout_width="match_parent" android:layout_height="wrap_content" />
                <com.project.trello_fintech.views.TaskDetailSectionView
                        app:iconSrc="@drawable/attachment_icon"
                        app:text="@string/attachments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/attachments"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/task_history"
                        android:drawableLeft="?attr/actionModePasteDrawable"
                        android:text="@string/changes_history"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>

        <include layout="@layout/add_button" android:id="@+id/task_action" />
        <com.project.trello_fintech.views.DropDownListView
                android:id="@+id/task_actions"
                android:background="@color/colorGreenDark"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/task_action"
                android:divider="@null"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        <com.project.trello_fintech.views.CircularProgressBar
                android:visibility="@{viewModel.isLoading? View.VISIBLE: View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>